[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "oasa_api"
version = "0.1.1"
description = "This Python package provides a convenient wrapper to interact with the OASA S.A. (Athens Public Transport) API, allowing users to retrieve various information related to the public transport network in Athens, Greece."
readme = "README.md"
license = { file="LICENSE" }
authors = [
    { name = "Romain DEROLLEPOT", email = "romain.derollepot@univ-eiffel.fr" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas",
    "requests",
]
keywords = ["API", "data", "public transport", "Athens", "timetables"]

[project.urls]
Repository = "https://github.com/rderollepot/oasa_api.git"

[tool.pytest.ini_options]
pythonpath = [
  "."
]
